# cppyy_minimal_cmake_example

./: CMakeLists.txt  README.md  requirements.txt
src/: mylib.cpp  mylib.hpp
